--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,14 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Raleway&display=swap');
+* {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: Raleway, sans-serif;
+  font-size: 1.5em;
+  text-align: center;
+  background-color: #2a1638;
+  color: #fff;
 }
